feat(native): 新增 UIA 通用原生库 + 微信 3.9 会话轮询与回信
新增 utils-support-native-uia：自研 Rust + IUIAutomation COM 绑定，经 Java 25
FFM 暴露 21 个 C ABI。设计约束为纯外部进程级 UIA 客户端——不注入、不改写目标
进程内存、不实现私有协议，故在风控视角下等价于人工操作界面。

核心能力：
- 窗口按标题子串 + 可选类名绑定，同进程多同名窗口时取面积最大者
  （微信主聊天窗、内置文章浏览器、登录窗同名，主窗最大）
- JSON 选择器引擎：控件类型/名称正则/AutomationId/类名/PID/可用性/在屏/
  深度/后代约束/祖先约束/序号，定位策略外置为数据，版本漂移只改配置
- Value 模式写文本（不抢焦点、不产生逐键事件）为主路径，剪贴板 Ctrl+V 兜底
- 控件树导出用于选择器调优，避免凭猜定位

在 utils-support-native-wechat 新增 com.chua.nativewechat.uia：
WechatUiaPollDirectory 提供 open/markBaseline/poll/reply，轮询产出
WechatUiaSession（含源用户、内容、时间戳）并支持回信。

两处安全约束写死在实现里，不提供关闭开关：
- 回信前强制校验标题栏与目标会话一致，不匹配即拒发。UIA 只能靠界面昵称
  切会话，而昵称可重复/撞名/被改动，切错会把私聊发进错误会话。
- 轮询过滤自己发出的消息。UIA 读到的"对方发的+自己发的"混在一起，不过滤
  会自问自答死循环；副作用是文件传输助手式自聊无法被回复，故提供
  explainSelfChat 显式诊断并提示改用小号对聊。

平台矩阵说明：UIA 为 Windows 独有 COM API，本库未做 cfg(windows) 门控，
非 Windows 目标无法编译，故有意保持单平台，Java 侧 isSupported() 显式
返回 false。native-wechat.yml 覆盖 windows/linux/darwin-x86_64/darwin-aarch64。

过程中修正：uia_destroy 原先先 CoUninitialize 再释放上下文，等于先拆 COM
公寓再释放其内部对象，已改为先释放后反初始化。